@@ -48,6 +48,9 @@ Changes in version 0.2.0.20-?? - 2008-02-??
     - Make the new hidden service code respect the SafeLogging setting.
       Bugfix on 0.2.0.x.  Patch from Karsten.
     - Detect size overflow in zlib code.
+    - We were comparing the raw BridgePassword entry with a base64'ed
+      version of it, when handling a "/tor/networkstatus-bridges"
+      directory request. Now compare correctly. Noticed by Veracode.
 
   o Code simplifications and refactoring:
     - Remove the tor_strpartition function: its logic was confused,
